# MultithreadedNetworkCalc

./: README.md
calculator/: CMakeLists.txt  calc_handle.h  calc_handle_factory.h  calculator.cpp  calculator.h  logger.cpp  logger.h  main.cpp  server.cpp  server.h
calculator/big_int/: BigInteger.cc  BigInteger.hh  BigIntegerUtils.cc  BigIntegerUtils.hh  BigUnsigned.hh  BigUnsignedInABase.hh  NumberlikeArray.hh
generator/: CMakeLists.txt  generator.cpp  generator.h  main.cpp
tests/: CMakeLists.txt  mocks.h  tests.cpp
